# advent-of-code

./: Cargo.toml  LICENSE
.cargo/: config.toml
1/src/: main.rs
2/src/: main.rs
benches/: day_1.rs  day_2.rs  day_4.rs
src/solutions/: day_1.rs  day_2.rs  day_4.rs  mod.rs
