[package]
name = "advent-of-code"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
criterion = "0.5.1"

[lib]
name = "advent_of_code"

[[bin]]
name = "day_1"

[[bench]]
name = "day_1"
harness = false

[[bin]]
name = "day_2"

[[bench]]
name = "day_2"
harness = false

[[bin]]
name = "day_4"

[[bench]]
name = "day_4"
harness = false
